--- a/create/start/image.html
+++ b/create/start/image.html
@@ -19,13 +19,13 @@
 
 /**
  * >>向下取整   若所得数为小数 向下取整
- * 1 则为 *  =>8-2^1    = 4
- * 2 则为 *  =>8-2^2    = 2
- * 3 则为 *  =>8-2^3    = 1
- * 4 则为 *  =>8-2^4    = 0
- * 5 则为 *  =>8-2^5    = 0
+ * 1 则为 *  =>8 / 2^1    = 4
+ * 2 则为 *  =>8 / 2^2    = 2
+ * 3 则为 *  =>8 / 2^3    = 1
+ * 4 则为 *  =>8 / 2^4    = 0.5->0
+ * 5 则为 *  =>8 / 2^5    = 0.25->0
  * 
- * 所以 一直向下取整，当小于0时 即为0
+ * 所以 一直向下取整
 */
 
 
