--- a/create/easelSprite/second.html
+++ b/create/easelSprite/second.html
@@ -36,7 +36,7 @@
                     "count": 16
                 },
                 "animations": {
-                    "zheng": [0, 3, ], 
+                    "zheng": [0, 3], 
                     "left": [4, 7, ], 
                     "right": [8, 11, ],         
                     "stright": [12, 15]         
