--- a/create/easelStroke/index.html
+++ b/create/easelStroke/index.html
@@ -18,7 +18,7 @@
         const shapeCircle=new createjs.Shape();
         shapeCircle.graphics.beginStroke("#00ff00").drawCircle(50,50,40);
 
-        
+        console.log(shapeCircle)
         const star=new createjs.Shape();
         star.graphics.beginStroke("#0000ff").drawPolyStar(250,50,40,5,0.5,90)//x y r  几个角  0.5刚好为一半 90 为旋转度数
 
