--- a/create/mousemove/index.html
+++ b/create/mousemove/index.html
@@ -23,21 +23,23 @@
             stage.addEventListener("stagemousedown", clickCanvas);
             stage.addEventListener("stagemousemove", moveCanvas);
             var data = {
-                images: ["../image/timg.jpg"],
+                images: ["../image/timg.png"],
                 frames: { width: 20, height: 20, regX: 10, regY: 10 }
             }
-
+            
             // 关于EaselJS的一些属性或者方法大家可以根据对应的api文档熟悉熟悉。
-            //例如Sprite可以在这里找到
+            // 例如Sprite可以在这里找到
             // file:.../EaselJS-0.8.1/docs/EaselJS_docs-0.8.1/classes/Sprite.html
             sprite = new createjs.Sprite(new createjs.SpriteSheet(data));
             createjs.Ticker.setFPS(20);
             createjs.Ticker.addEventListener("tick", tick);
+            // var t = stage.getNumChildren();//0
         }
 
         function tick(e) {
             var t = stage.getNumChildren();
-            for (var i = t - 1; i > 0; i--) {
+            // console.log(t:t)
+            for (var i = t - 1; i >= 0; i--) {
                 var st = stage.getChildAt(i);
 
                 // 设置单位帧的位置
@@ -70,7 +72,7 @@
             addS(Math.random() * 2 + 10, stage.mouseX, stage.mouseY, 1);
         }
 
-        // addS方法中所有小数或者随机数都是可以根据具体需求随意设置的，
+        // addS方法中所有小数或者随机数都是可以根据具体需求随意设置的
         function addS(count, x, y, speed) {
             for (var i = 0; i < count; i++) {
                 // 关于sprite.clone方法文档的介绍是，返回的是序列的实例，
@@ -93,9 +95,13 @@
                 sp.vY = Math.sin(a) * v;
                 sp.vS = (Math.random() - 0.5) * 0.2; // scale
                 sp.vA = -Math.random() * 0.05 - 0.01;// alpha
+
                 stage.addChild(sp);
             }
         }
+
+
+
     </script>
 </body>
 
